# criador_de_dashboard

./: README.md  pyproject.toml  report.md  requirements.txt  streamlit_app.py
src/criador_dashboard_automatico/: app.py  crew.py  main.py
src/criador_dashboard_automatico/config/: agents.yaml  tasks.yaml
src/criador_dashboard_automatico/tools/: dataframe_cleaner_tool.py  insights_rag_tool.py
